// protoc --go_out=plugins=grpc:. topicmanage.proto

syntax = "proto3";
package topicproto;

service TopicService {
    rpc GetConnectNum(GetConnectNumRequest) returns (GetConnectNumResponse){}
    rpc SubscribeTopic(SubscribeTopicRequest) returns (SubscribeTopicResponse){}
    rpc UnSubscribeTopic(UnSubscribeTopicRequest) returns (UnSubscribeTopicResponse){}
}

message GetConnectNumRequest {
    string Topic = 1;
}

message GetConnectNumResponse {
    int64 Number = 1;
}

message SubscribeTopicRequest {
    repeated string Topic = 1;
    string Ip = 2;
}

message SubscribeTopicResponse {

}

message UnSubscribeTopicRequest {
    repeated string Topic = 1;
    string Ip = 2;
}

message UnSubscribeTopicResponse {

}